results/SVCOMP/specgen/log-NullPointerException3-2024_02_28_18_11_42.txt
class A {
  int i;
}

public class NullPointerException3 {
    //@ ensures \result <==> a == null;
    public static boolean f() {
        A a = null;
        try {
            int i = a.i;
        } catch (NullPointerException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException3.java:6: error: cannot find symbol
    //@ ensures \result <==> a == null;
                             ^
  symbol:   variable a
  location: class NullPointerException3
1 error

class A {
  int i;
}

public class NullPointerException3 {
    //@ ensures \result <==> a == null;
    public static boolean f() {
        A a = null;
        try {
            int i = a.i;
        } catch (NullPointerException exc) {
            return false;
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/NullPointerException3.java:6: error: cannot find symbol
    //@ ensures \result <==> a == null;
                             ^
  symbol:   variable a
  location: class NullPointerException3
1 error

class A {
  int i;
}

public class NullPointerException3 {
    //@ ensures \result <==> true;
    public static boolean f() {
        A a = null;
        try {
            int i = a.i;
        } catch (NullPointerException exc) {
            return false;
        }
        return true;
    }
}
